--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.2.5",
+        "google/apiclient": "^2.7",
         "laravel/lumen-framework": "^7.0"
     },
     "require-dev": {
